manifests/z-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    stack: efk
spec:
  rules:
  -
    host: $ELASTICSEARCH_URL
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch
          servicePort: 9200
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  labels:
    app: kibana
    stack: efk
spec:
  rules:
  -
    host: $KIBANA_URL
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
